Replaced the Console.WriteLine code with the logger.info code Created 2 formats in the NLog.config one with a date and one without

--- a/src/Vts.MonteCarlo.CommandLineApplication/NLog.config
+++ b/src/Vts.MonteCarlo.CommandLineApplication/NLog.config
@@ -3,12 +3,15 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <targets>
-      <target name="logfile" xsi:type="File" fileName="file.txt" layout="${date:format=yyyyMMddHHmmss} ${message}"/>
-      <target name="console" xsi:type="Console"  layout="${date:format=HHmmss} ${message}"/>
+      <target name="logfile" xsi:type="File" fileName="logfile.txt" layout="${date} ${message}"/>
+      <target name="console1" xsi:type="Console"  layout="${time} ${message}"/>
+      <target name="console2" xsi:type="Console"  layout="${message}"/>
     </targets>
   
     <rules>
       <logger name="*" minlevel="Trace" writeTo="logfile" />
-      <logger name="*" minlevel="Info" writeTo="console" />
+      <logger name="Vts.MonteCarlo.MonteCarloSimulation" minlevel="Info" writeTo="console1" />
+      <logger name="Vts.MonteCarlo.CommandLineApplication.MonteCarloSetup" minlevel="Info" writeTo="console1" />
+      <logger name="Vts.MonteCarlo.CommandLineApplication.Program" minlevel="Info" writeTo="console2" />
     </rules>
 </nlog>
