Modified logic to determine whether to write to pMC database or not in MCSim. Updated pMC unit tests to delete previously generated databases prior to creating new (in case creation fails so to not read previous db and pass). Added DatabaseExtension method to determine if pMC database specified in Options.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -728,6 +728,9 @@
     <Compile Include="..\Vts\MonteCarlo\Enums.cs">
       <Link>MonteCarlo\Enums.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Extensions\DatabaseExtensionMethods.cs">
+      <Link>MonteCarlo\Extensions\DatabaseExtensionMethods.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Extensions\DetectorExtensionMethods.cs">
       <Link>MonteCarlo\Extensions\DetectorExtensionMethods.cs</Link>
     </Compile>
