Added code to the MapViewModel.cs to load strings from resources. Renamed StringExtensions.cs to StringLookup.cs to more accurately describe what it does.

--- a/src/Vts.SiteVisit/Vts.SiteVisit.csproj
+++ b/src/Vts.SiteVisit/Vts.SiteVisit.csproj
@@ -169,7 +169,7 @@
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\LocalizedStrings.cs" />
     <Compile Include="Extensions\OptionExtensions.cs" />
-    <Compile Include="Extensions\StringExtensions.cs">
+    <Compile Include="Extensions\StringLookup.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Model\MapData.cs" />
