Commented out obsolete code: IpMCSurfaceDetector, IpMCVolumeDetector, ISurfaceDetector, IVolumeDetector, IpMCSurfaceDetectorController, ISurfaceDetectorController, IVolumeDetectorController. Added DetectorController which replaces all above Controllers. Modified all detectors to use IDetector instead.  DetectorControllerFactory is now obsolete. Modified MCSim to not use DetectorControllerFactory and just use DetectorController. Put the loop of going through all photons in history two at a time to the volume detectors that needed it.
--HG--
branch : ch-110906-tally_refactoring

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -476,6 +476,9 @@
     <Compile Include="..\Vts\MonteCarlo\Controllers\DatabaseWriterController.cs">
       <Link>MonteCarlo\Controllers\DatabaseWriterController.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Controllers\DetectorController.cs">
+      <Link>MonteCarlo\Controllers\DetectorController.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Controllers\pMCDatabaseWriterController.cs">
       <Link>MonteCarlo\Controllers\pMCDatabaseWriterController.cs</Link>
     </Compile>
