Added a method to FileIO to write a string to a text file Added a test file for FileIO and wrote a test for this method

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -144,6 +144,9 @@
     <Compile Include="..\Vts.Test\Factories\SolverFactoryTests.cs">
       <Link>Factories\SolverFactoryTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\IO\FileIOTests.cs">
+      <Link>IO\FileIOTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\Modeling\ForwardSolvers\BSplinesCoefficientsTests.cs">
       <Link>Modeling\ForwardSolvers\BSplinesCoefficientsTests.cs</Link>
     </Compile>
