Added internal and external sources for 2D MG-RTE
--HG--
branch : jr-110527-2d_MGRTE_restructuring

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -287,8 +287,8 @@
     <Compile Include="..\Vts\FemModeling\MGRTE\2D\DataStructures\Measurement.cs">
       <Link>FemModeling\MGRTE\2D\DataStructures\Measurement.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\FemModeling\MGRTE\2D\DataStructures\Output.cs">
-      <Link>FemModeling\MGRTE\2D\DataStructures\Output.cs</Link>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\DataStructures\OutputCalculation.cs">
+      <Link>FemModeling\MGRTE\2D\DataStructures\OutputCalculation.cs</Link>
     </Compile>
     <Compile Include="..\Vts\FemModeling\MGRTE\2D\DataStructures\Parameters.cs">
       <Link>FemModeling\MGRTE\2D\DataStructures\Parameters.cs</Link>
