--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -299,8 +299,23 @@
     <Compile Include="..\Vts\FemModeling\MGRTE\2D\Enums.cs">
       <Link>FemModeling\MGRTE\2D\Enums.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\Factory\FemSourceFactory.cs">
+      <Link>FemModeling\MGRTE\2D\Factory\FemSourceFactory.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\FemModeling\MGRTE\2D\Initialization.cs">
       <Link>FemModeling\MGRTE\2D\Initialization.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\Interfaces\IExtFemSourceInput.cs">
+      <Link>FemModeling\MGRTE\2D\Interfaces\IExtFemSourceInput.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\Interfaces\IExtSource.cs">
+      <Link>FemModeling\MGRTE\2D\Interfaces\IExtSource.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\Interfaces\IIntFemSourceInput.cs">
+      <Link>FemModeling\MGRTE\2D\Interfaces\IIntFemSourceInput.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\Interfaces\IIntSource.cs">
+      <Link>FemModeling\MGRTE\2D\Interfaces\IIntSource.cs</Link>
     </Compile>
     <Compile Include="..\Vts\FemModeling\MGRTE\2D\IO\Source.cs">
       <Link>FemModeling\MGRTE\2D\IO\Source.cs</Link>
@@ -313,6 +328,42 @@
     </Compile>
     <Compile Include="..\Vts\FemModeling\MGRTE\2D\SolverMGRTE.cs">
       <Link>FemModeling\MGRTE\2D\SolverMGRTE.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\SourceInputs\ExternalSourceInputs\ExtLineSourceInput.cs">
+      <Link>FemModeling\MGRTE\2D\SourceInputs\ExternalInputs\ExtLineSourceInput.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\SourceInputs\ExternalSourceInputs\ExtPointSourceInput.cs">
+      <Link>FemModeling\MGRTE\2D\SourceInputs\ExternalInputs\ExtPointSourceInput.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\SourceInputs\InternalSourceInputs\Int2DCircularSourceInput.cs">
+      <Link>FemModeling\MGRTE\2D\SourceInputs\InternalInputs\Int2DCircularSourceInput.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\SourceInputs\InternalSourceInputs\Int2DEllipticalSourceInput.cs">
+      <Link>FemModeling\MGRTE\2D\SourceInputs\InternalInputs\Int2DEllipticalSourceInput.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\SourceInputs\InternalSourceInputs\Int2DPointSourceInput.cs">
+      <Link>FemModeling\MGRTE\2D\SourceInputs\InternalInputs\Int2DPointSourceInput.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\SourceInputs\InternalSourceInputs\Int2DRectangularSourceInput.cs">
+      <Link>FemModeling\MGRTE\2D\SourceInputs\InternalInputs\Int2DRectangularSourceInput.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\Sources\ExternalSources\ExtLineSource.cs">
+      <Link>FemModeling\MGRTE\2D\Sources\ExternalSources\ExtLineSource.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\Sources\ExternalSources\ExtPointSource.cs">
+      <Link>FemModeling\MGRTE\2D\Sources\ExternalSources\ExtPointSource.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\Sources\InternalSources\Int2DCircularSource.cs">
+      <Link>FemModeling\MGRTE\2D\Sources\InternalSources\Int2DCircularSource.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\Sources\InternalSources\Int2DEllipticalSource.cs">
+      <Link>FemModeling\MGRTE\2D\Sources\InternalSources\Int2DEllipticalSource.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\Sources\InternalSources\Int2DPointSource.cs">
+      <Link>FemModeling\MGRTE\2D\Sources\InternalSources\Int2DPointSource.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\FemModeling\MGRTE\2D\Sources\InternalSources\Int2DRectangularSource.cs">
+      <Link>FemModeling\MGRTE\2D\Sources\InternalSources\Int2DRectangularSource.cs</Link>
     </Compile>
     <Compile Include="..\Vts\IO\ArrayCustomBinaryReader.cs">
       <Link>IO\ArrayCustomBinaryReader.cs</Link>
