Added the outline structure of the command-line application
--HG--
branch : lm-111710-spectroscopy-restructuring

--- a/src/Vts.ImportSpectralData.Desktop/Vts.ImportSpectralData.Desktop.csproj
+++ b/src/Vts.ImportSpectralData.Desktop/Vts.ImportSpectralData.Desktop.csproj
@@ -9,7 +9,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Vts.ImportSpectralData.Desktop</RootNamespace>
-    <AssemblyName>Vts.ImportSpectralData.Desktop</AssemblyName>
+    <AssemblyName>Import</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -45,6 +45,12 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Vts.Desktop\Vts.Desktop.csproj">
+      <Project>{05B6020A-B646-4BBB-B9A0-B524F5F85023}</Project>
+      <Name>Vts.Desktop</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
